--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" data-theme="dark">
 
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Edu+SA+Hand:wght@400..700&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="src/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="style.css">
 
 
@@ -16,7 +17,11 @@
 </head>
 
 <body>
+  <div class="toggle">
+    <i id="toggleTheme" class="bi bi-sun"></i>
+  </div>
   <h1 class="title"> Qual foi o dia que iniciou o seu último período menstrual?</h1>
+  <h2>Dicas personalizadas para desenvolvedoras de acordo com o ciclo menstrual.</h2>
   <div class="content">
     <label for="input-date">Selecione a data:</label>
     <input type="date" id="input-date" name="input-date">
@@ -25,7 +30,10 @@
     <div id="info-container"></div>
   </div>
 
+  <h3>🌀 Cada ciclo é único. As fases e sugestões apresentadas aqui são baseadas em médias e padrões gerais, e podem
+    variar de pessoa para pessoa. Escute seu corpo e adapte o que fizer sentido para você. 💜</h3>
   <script src="script.js"></script>
+
 </body>
 
 </html>
